openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: onland-app-test
  name: onland-app-test
  namespace: onland-csp-dev-2
spec:
  clusterIP:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: onland-app-test
  sessionAffinity: None
  type: ClusterIP
