openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: onland-app-test
  name: onland-app-test
  namespace: onland-csp-dev-2
spec:
  host: ''
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: onland-app-test
    weight: 100
  wildcardPolicy: None
